==> BenKluwe/ArduCAM-Arduino/ArduCAM/ArduCAM.cpp <==
#include "memorysaver.h"
#include "ArduCAM.h"
#include "arducam_arch_raspberrypi.h"
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>
#include <unistd.h>
#include <wiringPi.h>
#include <wiringPiI2C.h>
#include "ArduCAM.h"
#include "Arduino.h"
#include "HardwareSerial.h"
#include <SPI.h>
#include <Wire.h>
#define Wire Wire1
#include "hardware/i2c.h"
#include "hardware/irq.h"
#include "hardware/spi.h"
#include "pico/binary_info.h"
#include "ArduCAM.h"

void ArduCAM::InitCAM() {

  switch (sensor_model) {
  case OV7660: {
#if defined OV7660_CAM
    wrSensorReg8_8(0x12, 0x80);
    arducam_sleep_ms(100);
    wrSensorRegs8_8(OV7660_QVGA);
#endif
    break;
  }
  case OV7725: {
#if defined OV7725_CAM
    byte reg_val;
    wrSensorReg8_8(0x12, 0x80);
    arducam_sleep_ms(100);
    wrSensorRegs8_8(OV7725_QVGA);
    rdSensorReg8_8(0x15, &reg_val);
    wrSensorReg8_8(0x15, (reg_val | 0x02));
#endif
    break;
  }
  case OV7670: {
#if defined OV7670_CAM
    wrSensorReg8_8(0x12, 0x80);
    arducam_sleep_ms(100);
    wrSensorRegs8_8(OV7670_QVGA);
#endif
    break;
  }
  case OV7675: {
#if defined OV7675_CAM
    wrSensorReg8_8(0x12, 0x80);
    arducam_sleep_ms(100);
    wrSensorRegs8_8(OV7675_QVGA);

#endif
    break;
  }
  case MT9D111_A: {
#if defined MT9D111A_CAM
    wrSensorRegs8_16(MT9D111_QVGA_30fps);
    arducam_sleep_ms(1000);
    wrSensorReg8_16(0x97, 0x0020);
    wrSensorReg8_16(0xf0, 0x00);
    wrSensorReg8_16(0x21, 0x8403); // Mirror Column
    wrSensorReg8_16(0xC6, 0xA103); // SEQ_CMD
    wrSensorReg8_16(0xC8, 0x0005); // SEQ_CMD
#endif
    break;
  }
  case MT9D111_B: {
#if defined MT9D111B_CAM
    wrSensorRegs8_16(MT9D111_QVGA_30fps);
    arducam_sleep_ms(1000);
    wrSensorReg8_16(0x97, 0x0020);
    wrSensorReg8_16(0xf0, 0x00);
    wrSensorReg8_16(0x21, 0x8403); // Mirror Column
    wrSensorReg8_16(0xC6, 0xA103); // SEQ_CMD
    wrSensorReg8_16(0xC8, 0x0005); // SEQ_CMD
#endif
    break;
  }
  case OV5642: {
#if (defined(OV5642_CAM) || defined(OV5642_MINI_5MP) ||                        \
     defined(OV5642_MINI_5MP_BIT_ROTATION_FIXED) ||                            \
     defined(OV5642_MINI_5MP_PLUS))
    wrSensorReg16_8(0x3008, 0x80);
    if (m_fmt == RAW) {
      // Init and set 640x480;
      wrSensorRegs16_8(OV5642_1280x960_RAW);
      wrSensorRegs16_8(OV5642_640x480_RAW);
    } else {
      wrSensorRegs16_8(OV5642_QVGA_Preview);
      arducam_sleep_ms(100);

      if (m_fmt == JPEG) {
        arducam_sleep_ms(100);
        wrSensorRegs16_8(OV5642_JPEG_Capture_QSXGA);
        wrSensorRegs16_8(ov5642_320x240);
        arducam_sleep_ms(100);
        wrSensorReg16_8(0x3818, 0xa8);
        wrSensorReg16_8(0x3621, 0x10);
        wrSensorReg16_8(0x3801, 0xb0);
#if (defined(OV5642_MINI_5MP_PLUS) || (defined ARDUCAM_SHIELD_V2))
        wrSensorReg16_8(0x4407, 0x08);
#else
        wrSensorReg16_8(0x4407, 0x0C);
#endif
        wrSensorReg16_8(0x5888, 0x00);
        wrSensorReg16_8(0x5000, 0xFF);
      } else {

        byte reg_val;
        wrSensorReg16_8(0x4740, 0x21);
        wrSensorReg16_8(0x501e, 0x2a);
        wrSensorReg16_8(0x5002, 0xf8);
        wrSensorReg16_8(0x501f, 0x01);
        wrSensorReg16_8(0x4300, 0x61);
        rdSensorReg16_8(0x3818, &reg_val);
        wrSensorReg16_8(0x3818, (reg_val | 0x60) & 0xff);
        rdSensorReg16_8(0x3621, &reg_val);
        wrSensorReg16_8(0x3621, reg_val & 0xdf);
      }
    }

#endif
    break;
  }
  case OV5640: {
#if (defined(OV5640_CAM) || defined(OV5640_MINI_5MP_PLUS))
    arducam_sleep_ms(100);
    if (m_fmt == JPEG) {
      wrSensorReg16_8(0x3103, 0x11);
      wrSensorReg16_8(0x3008, 0x82);
      arducam_sleep_ms(100);
      wrSensorRegs16_8(OV5640YUV_Sensor_Dvp_Init);
      arducam_sleep_ms(500);
      wrSensorRegs16_8(OV5640_JPEG_QSXGA);
      wrSensorRegs16_8(OV5640_QSXGA2QVGA);
#if (defined(OV5640_MINI_5MP_PLUS) || (defined ARDUCAM_SHIELD_V2))
      wrSensorReg16_8(0x4407, 0x04);
#else
      wrSensorReg16_8(0x4407, 0x0C);
#endif
    } else {
      wrSensorReg16_8(0x3103, 0x11);
      wrSensorReg16_8(0x3008, 0x82);
      arducam_sleep_ms(500);
      wrSensorRegs16_8(OV5640YUV_Sensor_Dvp_Init);
      wrSensorRegs16_8(OV5640_RGB_QVGA);
    }

#endif
    break;
  }
  case OV3640: {
#if defined OV3640_CAM
    wrSensorRegs16_8(OV3640_QVGA);
#endif
    break;
  }
  case OV2640: {
#if (defined(OV2640_CAM) || defined(OV2640_MINI_2MP) ||                        \
     defined(OV2640_MINI_2MP_PLUS))
    wrSensorReg8_8(0xff, 0x01);
    wrSensorReg8_8(0x12, 0x80);
    arducam_sleep_ms(100);
    if (m_fmt == JPEG) {
      wrSensorRegs8_8(OV2640_JPEG_INIT);
      wrSensorRegs8_8(OV2640_YUV422);
      wrSensorRegs8_8(OV2640_JPEG);
      wrSensorReg8_8(0xff, 0x01);
      wrSensorReg8_8(0x15, 0x00);
      wrSensorRegs8_8(OV2640_320x240_JPEG);
      // wrSensorReg8_8(0xff, 0x00);
      // wrSensorReg8_8(0x44, 0x32);
    } else {
      wrSensorRegs8_8(OV2640_QVGA);
    }
#endif
    break;
  }
  case OV9655: {

    break;
  }
  case MT9M112: {
#if defined MT9M112_CAM
    wrSensorRegs8_16(MT9M112_QVGA);
#endif
    break;
  }

  case MT9M034: {
#if defined MT9M034_CAM
    wrSensorRegs16_16(MT9M034_RAW);
#endif
    break;
  }

  case MT9V111: {
#if defined MT9V111_CAM
    // Reset sensor core
    wrSensorReg8_16(0x01, 0x04);
    wrSensorReg8_16(0x0D, 0x01);
    wrSensorReg8_16(0x0D, 0x00);
    // Reset IFP
    wrSensorReg8_16(0x01, 0x01);
    wrSensorReg8_16(0x07, 0x01);
    wrSensorReg8_16(0x07, 0x00);
    arducam_sleep_ms(100);
    wrSensorRegs8_16(MT9V111_QVGA);
    // arducam_sleep_ms(1000);
    wrSensorReg8_16(0x97, 0x0020);
    wrSensorReg8_16(0xf0, 0x00);
    wrSensorReg8_16(0x21, 0x8403); // Mirror Column
    wrSensorReg8_16(0xC6, 0xA103); // SEQ_CMD
    wrSensorReg8_16(0xC8, 0x0005); // SEQ_CMD
#endif
    break;
  }

  case MT9M001: {
#if defined MT9M001_CAM
    wrSensorRegs8_16(MT9M001_QVGA_30fps);
#endif
    break;
  }
  case MT9T112: {
#if defined MT9T112_CAM

    wrSensorReg16_16(0x001a, 0x0219);
    wrSensorReg16_16(0x001a, 0x0018);
    // reset camera
    wrSensorReg16_16(0x0014, 0x2425);
    wrSensorReg16_16(0x0014, 0x2145);
    wrSensorReg16_16(0x0010, 0x0110);
    wrSensorReg16_16(0x0012, 0x00f0);
    wrSensorReg16_16(0x002a, 0x7f77);
    wrSensorReg16_16(0x0014, 0x2545);
    wrSensorReg16_16(0x0014, 0x2547);
    wrSensorReg16_16(0x0014, 0x3447);
    wrSensorReg16_16(0x0014, 0x3047);
    arducam_sleep_ms(10);
    wrSensorReg16_16(0x0014, 0x3046);
    wrSensorReg16_16(0x0022, 0x01f4);
    wrSensorReg16_16(0x001e, 0x0707);
    wrSensorReg16_16(0x3b84, 0x01f4);
    wrSensorReg16_16(0x002e, 0x0500);
    wrSensorReg16_16(0x0018, 0x402b);
    wrSensorReg16_16(0x3b82, 0x0004);
    wrSensorReg16_16(0x0018, 0x402f);
    wrSensorReg16_16(0x0018, 0x402e);
    arducam_sleep_ms(50);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    wrSensorReg16_16(0x0614, 0x0001);
    arducam_sleep_ms(1);
    arducam_sleep_ms(10);
    // init pll
    wrSensorReg16_16(0x098e, 0x6800);
    wrSensorReg16_16(0x0990, 0x0140);
    wrSensorReg16_16(0x098e, 0x6802);
    wrSensorReg16_16(0x0990, 0x00f0);
    wrSensorReg16_16(0x098e, 0x68a0);
    wrSensorReg16_16(0x098e, 0x68a0);
    wrSensorReg16_16(0x0990, 0x082d);
    wrSensorReg16_16(0x098e, 0x4802);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0x4804);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0x4806);
    wrSensorReg16_16(0x0990, 0x060d);
    wrSensorReg16_16(0x098e, 0x4808);
    wrSensorReg16_16(0x0990, 0x080d);
    wrSensorReg16_16(0x098e, 0x480c);
    wrSensorReg16_16(0x0990, 0x046c);
    wrSensorReg16_16(0x098e, 0x480f);
    wrSensorReg16_16(0x0990, 0x00cc);
    wrSensorReg16_16(0x098e, 0x4811);
    wrSensorReg16_16(0x0990, 0x0381);
    wrSensorReg16_16(0x098e, 0x4813);
    wrSensorReg16_16(0x0990, 0x024f);
    wrSensorReg16_16(0x098e, 0x481d);
    wrSensorReg16_16(0x0990, 0x0436);
    wrSensorReg16_16(0x098e, 0x481f);
    wrSensorReg16_16(0x0990, 0x05d0);
    wrSensorReg16_16(0x098e, 0x4825);
    wrSensorReg16_16(0x0990, 0x1153);
    wrSensorReg16_16(0x098e, 0x6ca0);
    wrSensorReg16_16(0x098e, 0x6ca0);
    wrSensorReg16_16(0x0990, 0x082d);
    wrSensorReg16_16(0x098e, 0x484a);
    wrSensorReg16_16(0x0990, 0x0004);
    wrSensorReg16_16(0x098e, 0x484c);
    wrSensorReg16_16(0x0990, 0x0004);
    wrSensorReg16_16(0x098e, 0x484e);
    wrSensorReg16_16(0x0990, 0x060b);
    wrSensorReg16_16(0x098e, 0x4850);
    wrSensorReg16_16(0x0990, 0x080b);
    wrSensorReg16_16(0x098e, 0x4857);
    wrSensorReg16_16(0x0990, 0x008c);
    wrSensorReg16_16(0x098e, 0x4859);
    wrSensorReg16_16(0x0990, 0x01f1);
    wrSensorReg16_16(0x098e, 0x485b);
    wrSensorReg16_16(0x0990, 0x00ff);
    wrSensorReg16_16(0x098e, 0x4865);
    wrSensorReg16_16(0x0990, 0x0668);
    wrSensorReg16_16(0x098e, 0x4867);
    wrSensorReg16_16(0x0990, 0x0af0);
    wrSensorReg16_16(0x098e, 0x486d);
    wrSensorReg16_16(0x0990, 0x0af0);
    wrSensorReg16_16(0x098e, 0xa005);
    wrSensorReg16_16(0x0990, 0x0001);
    wrSensorReg16_16(0x098e, 0x6c11);
    wrSensorReg16_16(0x0990, 0x0003);
    wrSensorReg16_16(0x098e, 0x6811);
    wrSensorReg16_16(0x0990, 0x0003);
    wrSensorReg16_16(0x098e, 0xc8a5);
    wrSensorReg16_16(0x0990, 0x0025);
    wrSensorReg16_16(0x098e, 0xc8a6);
    wrSensorReg16_16(0x0990, 0x0028);
    wrSensorReg16_16(0x098e, 0xc8a7);
    wrSensorReg16_16(0x0990, 0x002c);
    wrSensorReg16_16(0x098e, 0xc8a8);
    wrSensorReg16_16(0x0990, 0x002f);
    wrSensorReg16_16(0x098e, 0xc844);
    wrSensorReg16_16(0x0990, 0x00ba);
    wrSensorReg16_16(0x098e, 0xc92f);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0xc845);
    wrSensorReg16_16(0x0990, 0x009b);
    wrSensorReg16_16(0x098e, 0xc92d);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0xc88c);
    wrSensorReg16_16(0x0990, 0x0082);
    wrSensorReg16_16(0x098e, 0xc930);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0xc88d);
    wrSensorReg16_16(0x0990, 0x006d);
    wrSensorReg16_16(0x098e, 0xc92e);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x098e, 0xa002);
    wrSensorReg16_16(0x0990, 0x0010);
    wrSensorReg16_16(0x098e, 0xa009);
    wrSensorReg16_16(0x0990, 0x0002);
    wrSensorReg16_16(0x098e, 0xa00a);
    wrSensorReg16_16(0x0990, 0x0003);
    wrSensorReg16_16(0x098e, 0xa00c);
    wrSensorReg16_16(0x0990, 0x000a);
    wrSensorReg16_16(0x098e, 0x4846);
    wrSensorReg16_16(0x0990, 0x0014);
    wrSensorReg16_16(0x098e, 0x488e);
    wrSensorReg16_16(0x0990, 0x0014);
    wrSensorReg16_16(0x098e, 0xc844);
    wrSensorReg16_16(0x0990, 0x0085);
    wrSensorReg16_16(0x098e, 0xc845);
    wrSensorReg16_16(0x0990, 0x006e);
    wrSensorReg16_16(0x098e, 0xc88c);
    wrSensorReg16_16(0x0990, 0x0082);
    wrSensorReg16_16(0x098e, 0xc88d);
    wrSensorReg16_16(0x0990, 0x006c);
    wrSensorReg16_16(0x098e, 0xc8a5);
    wrSensorReg16_16(0x0990, 0x001b);
    wrSensorReg16_16(0x098e, 0xc8a6);
    wrSensorReg16_16(0x0990, 0x001e);
    wrSensorReg16_16(0x098e, 0xc8a7);
    wrSensorReg16_16(0x0990, 0x0020);
    wrSensorReg16_16(0x098e, 0xc8a8);
    wrSensorReg16_16(0x0990, 0x0023);
    // init setting
    wrSensorReg16_16(0x0018, 0x002a);
    wrSensorReg16_16(0x3084, 0x2409);
    wrSensorReg16_16(0x3092, 0x0a49);
    wrSensorReg16_16(0x3094, 0x4949);
    wrSensorReg16_16(0x3096, 0x4950);
    wrSensorReg16_16(0x098e, 0x68a0);
    wrSensorReg16_16(0x0990, 0x0a2e);
    wrSensorReg16_16(0x098e, 0x6ca0);
    wrSensorReg16_16(0x0990, 0x0a2e);
    wrSensorReg16_16(0x098e, 0x6c90);
    wrSensorReg16_16(0x0990, 0x0cb4);
    wrSensorReg16_16(0x098e, 0x6807);
    wrSensorReg16_16(0x0990, 0x0004);
    wrSensorReg16_16(0x098e, 0xe88e);
    wrSensorReg16_16(0x0990, 0x0000);
    wrSensorReg16_16(0x316c, 0x350f);
    wrSensorReg16_16(0x001e, 0x0777);
    wrSensorReg16_16(0x098e, 0x8400);
    wrSensorReg16_16(0x0990, 0x0001);
    arducam_sleep_ms(100);
    wrSensorReg16_16(0x098e, 0x8400);
    wrSensorReg16_16(0x0990, 0x0006);
    // Serial.println("MT9T112 init done");
#endif
    break;
  }
  case MT9D112: {
#if defined MT9D112_CAM
    wrSensorReg16_16(0x301a, 0x0acc);
    wrSensorReg16_16(0x3202, 0x0008);
    arducam_sleep_ms(100);
    wrSensorReg16_16(0x341e, 0x8f09);
    wrSensorReg16_16(0x341c, 0x020c);
    arducam_sleep_ms(100);
    wrSensorRegs16_16(MT9D112_default_setting);
    wrSensorReg16_16(0x338c, 0xa103);
    wrSensorReg16_16(0x3390, 0x0006);
    arducam_sleep_ms(100);
    wrSensorReg16_16(0x338c, 0xa103);
    wrSensorReg16_16(0x3390, 0x0005);
    arducam_sleep_ms(100);
    wrSensorRegs16_16(MT9D112_soc_init);
    arducam_sleep_ms(200);
    wrSensorReg16_16(0x332E, 0x0020); // RGB565

#endif
  }
  default:

    break;
  }
}

byte ArduCAM::wrSensorReg8_8(int regID, int regDat) {
#if defined(RASPBERRY_PI)
  arducam_i2c_write(regID, regDat);
#elif defined(PICO_BOARD)
  uint8_t buf[2];
  buf[0] = regID;
  buf[1] = regDat;
  i2c_write_blocking(I2C_PORT, sensor_addr, buf, 2, true);
#else
  Wire.beginTransmission(sensor_addr >> 1);
  Wire.write(regID & 0x00FF);
  Wire.write(regDat & 0x00FF);
  if (Wire.endTransmission()) {
    return 0;
  }
  arducam_sleep_ms(1);
#endif
  return 1;
}

byte ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t *regDat) {
#if defined(RASPBERRY_PI)
  arducam_i2c_read(regID, regDat);
#elif defined(PICO_BOARD)
  i2c_write_blocking(I2C_PORT, sensor_addr, &regID, 1, true);
  i2c_read_blocking(I2C_PORT, sensor_addr, regDat, 1, false);
#else
  Wire.beginTransmission(sensor_addr >> 1);
  Wire.write(regID & 0x00FF);
  Wire.endTransmission();

  Wire.requestFrom((sensor_addr >> 1), 1);
  if (Wire.available())
    *regDat = Wire.read();
  arducam_sleep_ms(1);
#endif
  return 1;
}

byte ArduCAM::wrSensorReg8_16(int regID, int regDat) {
#if defined(RASPBERRY_PI)
  arducam_i2c_write16(regID, regDat);
#elif defined (PICO_BOARD)
#else
  Wire.beginTransmission(sensor_addr >> 1);
  Wire.write(regID & 0x00FF);

  Wire.write(regDat >> 8); // sends data byte, MSB first
  Wire.write(regDat & 0x00FF);
  if (Wire.endTransmission()) {
    return 0;
  }
  arducam_sleep_ms(1);
#endif
  return 1;
}

byte ArduCAM::rdSensorReg8_16(uint8_t regID, uint16_t *regDat) {
#if defined(RASPBERRY_PI)
  arducam_i2c_read16(regID, regDat);
#elif defined (PICO_BOARD)
#else
  uint8_t temp;
  Wire.beginTransmission(sensor_addr >> 1);
  Wire.write(regID);
  Wire.endTransmission();

  Wire.requestFrom((sensor_addr >> 1), 2);
  if (Wire.available()) {
    temp = Wire.read();
    *regDat = (temp << 8) | Wire.read();
  }
  arducam_sleep_ms(1);
#endif
  return 1;
}
